k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrm-ingress
spec:
  ingressClassName: nginx   # 👈 important
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 80

      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 80

      - path: /member
        pathType: Prefix
        backend:
          service:
            name: member
            port:
              number: 80
